Add jwt-based security
