# src/main/java/com/example/bankcards/controller/AuthController.java
@@ -1,0 +1,32 @@
+package com.example.bankcards.controller;
+
+import com.example.bankcards.dto.AuthRequest;
+import com.example.bankcards.dto.AuthResponse;
+import com.example.bankcards.security.AuthService;
+import jakarta.servlet.http.HttpServletRequest;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/auth")
+public class AuthController {
+
+    private final AuthService service;
+
+    public AuthController(AuthService service) {
+        this.service = service;
+    }
+
+    @PostMapping
+    public AuthResponse authenticate(@RequestBody AuthRequest request) {
+        return service.authenticate(request);
+    }
+
+    @PostMapping("/refresh-token")
+    public ResponseEntity<AuthResponse> refreshToken(HttpServletRequest request) {
+        return service.refreshToken(request);
+    }
+}
