# src/main/java/com/example/bankcards/dto/AuthResponse.java
@@ -1,0 +1,6 @@
+package com.example.bankcards.dto;
+
+public record AuthResponse(
+        String accessToken,
+        String refreshToken
+) {}
