# src/main/java/com/example/bankcards/dto/ErrorResponse.java
@@ -1,0 +1,10 @@
+package com.example.bankcards.dto;
+
+import java.time.LocalDateTime;
+
+public record ErrorResponse(
+        int status,
+        String message,
+        LocalDateTime timestamp
+) {
+}
