# src/main/java/com/example/bankcards/dto/RegisterRequest.java
@@ -1,0 +1,8 @@
+package com.example.bankcards.dto;
+
+public record RegisterRequest(
+        String username,
+        String fullName,
+        String password
+) {
+}
